# template_python

./: .bandit  .bump-my-version.cfg  .bumpversion.toml  .coveragerc  .cz.yaml  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc.yaml  .pylintrc  .yamllint.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  Dockerfile  Makefile  README.md  TODO.md  bump_version.py  compile.out  generate_k8.py  generate_k8s.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  renovate.json  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.github/: dependabot.yml  labeler.yaml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_update.md  feature_request.md  performance_issue.md  refactor_request.md  security_vulnerability.md  support_request.md  task_or_enhancement.md  test_case_suggestion.md
.github/workflows/: Apply Labels to Pull Request.yml  ArgoCD Linting & Sync Check.yml  Attest-build-provenance.yml  Auditwheel Compatibility.yml  Auto Assign Issue.yml  Auto Rebase Dependabot Pull Requests.yml  Auto Rebase Pull Requests.yml  Automated Version Bump and Changelog.yml  Bandit Security Scan.yml  Benchmark Performance.yml  Black Formatting Check.yml  Build and Push Docker Image.yml  Check Outdated Dependencies.yml  Cleanup Artifacts.yml  Cleanup GitHub Cache.yml  Cleanup Old Docker Images.yml  Cleanup Old Releases.yml  Cleanup Old Workflow Logs.yml  Cleanup Stale Branches.yml  Code Coverage.yml  CodeQL Analysis.yml  Commit Message Lint.yml  Continuous Integration.yml  Create Greetings on Pull Request.yml  Delete Old Workflow Runs.yml  Dependabot Dependency Updates.yml  Dependency Check with Deptry.yml  Dependency Security Audit.yml  Deploy MkDocs to GitHub Pages.yml  Deploy Mkdocs Documentation.yml  Docker Security Scan.yml  Expire Old Workflow Logs.yml  GitHub Actions Cleanup.yml  GitHub Release & Artifact Upload.yml  GitHub Workflow Lint.yml  Github Automated Releases.yml  Helm Chart Validation.yml  Helm Dry-Run Deployment.yml  Helm Lint and Validation.yml  Helm Template & Package Check.yml  (+64 more)
.github/workflows/ISSUE_TEMPLATE/: bug_report.md  performance_issue.md  support_request.md
.github/workflows/archive/: SBOM and License Audit.yml
.github/workflows/ci-experiments/: ArgoCD Linting & Sync Check.yml  Argocd deployment test.yml  Helm Chart Validation.yml  Helm Dry-Run Deployment.yml  Helm Template & Package Check.yml  Validate ArgoCD Applications.yml  Validate ArgoCD Manifests.yml  Validate Kubernetes YAML.yml  Validate Kustomize Overlays.yml  ci-failure-notifications-split.yml
.hooks/: check-audit-artifacts.py  check-compiled-requirements.py  check-version-consistency.py
api/: index.html
app/: main.py
docs/: api.md  conf.py  index.md  index.rst
docs/source/: conf.py  index.rst
more-details/: index.html
other-topic/: index.html
scripts/: generate_k8.py  generate_k8_manifests.py  init_repo.sh
search/: search_index.json
src/app/: __init__.py  config_shared.py  main.py  output_handler.py  queue_handler.py  queue_sender.py
src/app/utils/: __init__.py  config_utils.py  healthcheck.py  metrics.py  metrics_server.py  rate_limit.py  redactor.py  request_with_timeout.py  retry_request.py  safe_logger.py  setup_logger.py  track_polling_metrics.py  track_request_metrics.py  types.py  validate_data.py  validate_environment_variables.py  vault_client.py
tests/: conftest.py  test_config.py  test_output_handler.py  test_queue_handler.py  test_vault_client.py
tests/utils/: test_config_shared.py  test_healthcheck.py  test_output_handler_basic.py  test_rate_limit.py  test_request_with_timeout.py  test_retry_request.py  test_track_polling_metrics.py  test_track_request_metrics.py  test_types.py  test_validate_environment_variables.py  test_vault_client.py
